{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 25,
  "lineage": "ab288de2-bf14-d90f-f242-ecedcfcbf8ae",
  "resources": [
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.Networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0fcb2e221bf8635ca",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-230-108-12.compute-1.amazonaws.com",
            "public_ip": "3.230.108.12",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-internet-gateway",
      "provider": "module.Networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844603463601:internet-gateway/igw-06e49eb4513bb7651",
            "id": "igw-06e49eb4513bb7651",
            "owner_id": "844603463601",
            "tags": {
              "Name": "my_ig"
            },
            "tags_all": {
              "Name": "my_ig"
            },
            "vpc_id": "vpc-03c476ae8e7fbc7ee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform-nat-gateway",
      "provider": "module.Networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fcb2e221bf8635ca",
            "id": "nat-0573a3269f9e7c5c2",
            "subnet_id": "subnet-0dc050aebfe64dfaa",
            "tags": {
              "Name": "my-Nat-gateway"
            },
            "tags_all": {
              "Name": "my-Nat-gateway"
            }
          },
          "dependencies": [
            "module.Networking.aws_eip.nat",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.terraform_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fcb2e221bf8635ca",
            "id": "nat-0c4de3c7a7324e175",
            "network_interface_id": "eni-07e105f792cdccf26",
            "private_ip": "10.0.0.28",
            "public_ip": "3.230.108.12",
            "subnet_id": "subnet-0e37e7aa0b48cc6d3",
            "tags": {
              "Name": "my-Nat-gateway"
            },
            "tags_all": {
              "Name": "my-Nat-gateway"
            }
          },
          "dependencies": [
            "module.Networking.aws_eip.nat",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.terraform_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-private-route-table",
      "provider": "module.Networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-0802c4e243bc736df",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "eipalloc-0fcb2e221bf8635ca",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-private-RT"
            },
            "tags_all": {
              "Name": "my-private-RT"
            },
            "vpc_id": "vpc-03c476ae8e7fbc7ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_eip.nat",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public-route-table",
      "provider": "module.Networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844603463601:route-table/rtb-013d5dea4a33f10c6",
            "id": "rtb-013d5dea4a33f10c6",
            "owner_id": "844603463601",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06e49eb4513bb7651",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-public-RT"
            },
            "tags_all": {
              "Name": "my-public-RT"
            },
            "vpc_id": "vpc-03c476ae8e7fbc7ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Networking.aws_internet_gateway.terraform-internet-gateway",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-private01",
      "provider": "module.Networking.provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public01",
      "provider": "module.Networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00374150a5c5df493",
            "route_table_id": "rtb-013d5dea4a33f10c6",
            "subnet_id": "subnet-0dc050aebfe64dfaa"
          },
          "dependencies": [
            "module.Networking.aws_internet_gateway.terraform-internet-gateway",
            "module.Networking.aws_route_table.terraform-public-route-table",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.terraform_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08acb46ee16682c6b",
            "route_table_id": "rtb-013d5dea4a33f10c6",
            "subnet_id": "subnet-0e37e7aa0b48cc6d3"
          },
          "dependencies": [
            "module.Networking.aws_internet_gateway.terraform-internet-gateway",
            "module.Networking.aws_route_table.terraform-public-route-table",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.terraform_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.SecurityGroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-security-group",
      "provider": "module.SecurityGroup.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844603463601:security-group/sg-0dfb0ffb01c0494f3",
            "description": "It is terraform Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dfb0ffb01c0494f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port for HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port for SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-sg",
            "name_prefix": "",
            "owner_id": "844603463601",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-sg"
            },
            "tags_all": {
              "Name": "my-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c476ae8e7fbc7ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844603463601:subnet/subnet-028d2ea6cd7bb97cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.32/28",
            "id": "subnet-028d2ea6cd7bb97cc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "844603463601",
            "tags": {
              "Name": "terraform-private-subnet03"
            },
            "tags_all": {
              "Name": "terraform-private-subnet03"
            },
            "vpc_id": "vpc-03c476ae8e7fbc7ee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844603463601:subnet/subnet-0a493bd639ad57b77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.48/28",
            "id": "subnet-0a493bd639ad57b77",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "844603463601",
            "tags": {
              "Name": "terraform-private-subnet04"
            },
            "tags_all": {
              "Name": "terraform-private-subnet04"
            },
            "vpc_id": "vpc-03c476ae8e7fbc7ee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844603463601:subnet/subnet-0dc050aebfe64dfaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/28",
            "id": "subnet-0dc050aebfe64dfaa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "844603463601",
            "tags": {
              "Name": "terraform-public-subnet01"
            },
            "tags_all": {
              "Name": "terraform-public-subnet01"
            },
            "vpc_id": "vpc-03c476ae8e7fbc7ee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844603463601:subnet/subnet-0e37e7aa0b48cc6d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.16/28",
            "id": "subnet-0e37e7aa0b48cc6d3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "844603463601",
            "tags": {
              "Name": "terraform-public-subnet02"
            },
            "tags_all": {
              "Name": "terraform-public-subnet02"
            },
            "vpc_id": "vpc-03c476ae8e7fbc7ee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844603463601:vpc/vpc-03c476ae8e7fbc7ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/26",
            "default_network_acl_id": "acl-0cef6630fa525d74d",
            "default_route_table_id": "rtb-0de0c2b0459bb01d1",
            "default_security_group_id": "sg-078c50fd7288631e2",
            "dhcp_options_id": "dopt-cdfad4b7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03c476ae8e7fbc7ee",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0de0c2b0459bb01d1",
            "owner_id": "844603463601",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}